--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>About</title>
+    <title>About - 大佬图床</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
@@ -58,6 +58,7 @@
                 <li>含有色情、暴力、宣扬恐怖主义的图片</li>
                 <li>侵犯版权、未经授权的图片</li>
                 <li>其他违反中华人民共和国法律的图片</li>
+                <li>没事来大佬博客逛一逛 www.dalao.pro</li>
             </ul>
         </div>
         <!-- <div class="about-contact text-center">
