--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
     <footer class="footer">
         <div class="container text-center">
             <p class="text-muted">Copyright Ⓒ 2023 All rights reserved. 请勿上传违反中国法律的图片，违者后果自负。 
-                本程序基于Telegraph，开源于GitHub <a href="https://github.com/x-dr/telegraph-Image" target="_blank" >telegraph-Image</a></p>
+            本站搭建由<a href="https://www.dalao.pro" target="_blank" >大佬博客</a>搭建维护</p>           
         </div>
     </footer>
 
