--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <a class="nav-link active" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://www.dalao.pro/">Gallery</a>
+                        <a class="nav-link" href="https://www.dalao.pro/">博客</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./about.html">About</a>
