--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" href="/">Home</a>
+                        <a class="nav-link active" href="/">首页</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://www.dalao.pro/">博客</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./about.html">About</a>
+                        <a class="nav-link" href="./about.html">关于</a>
                     </li>
                 </ul>
             </div>
