--- a/about.html
+++ b/about.html
@@ -31,13 +31,13 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link " href="/">Home</a>
+                        <a class="nav-link active" href="/">首页</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./gallery.html">Gallery</a>
+                        <a class="nav-link" href="https://www.dalao.pro/">博客</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="./about.html">About</a>
+                        <a class="nav-link" href="./about.html">关于</a>
                     </li>
                 </ul>
             </div>
