--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <title>大佬图床-免费公益图床天花板</title>
+    <meta name="keywords" content="大佬图床,免费图床,永久免费图床,在线图床,图片上传,图片外链" />
+    <meta name="description" content="大佬图床成立与2023年,我们励志成为免费公益图床的天花板，让免费图床更上一层楼."/>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.2.3/css/bootstrap.min.css" rel="stylesheet">
     <link href="/asset/css/notifyme.css" rel="stylesheet">
@@ -113,7 +115,7 @@
 
     <footer class="footer">
         <div class="container text-center">
-            <p class="text-muted">Copyright Ⓒ 2023 All rights reserved. 请勿上传违反中国法律的图片，违者后果自负。 
+            <p class="text-muted">Copyright Ⓒ 2023 All rights reserved. 请勿上传违反中国法律的图片，违者后果自负。投诉举报邮箱：mail@dalao.pro 
             本站搭建由<a href="https://www.dalao.pro" target="_blank" >大佬博客</a>搭建维护</p>           
         </div>
     </footer>
@@ -133,6 +135,8 @@
                     <div style="margin-top: 5px;"></div>
                     <input class="form-control" type="text" onclick="this.select();" value="{{wp}}">
                     <div style="margin-top: 5px;"></div>
+					<input class="form-control" type="text" onclick="this.select();" value="{{wpcf}}">
+					<div style="margin-top: 5px;"></div>
                     <input class="form-control" type="text" onclick="this.select();" value="{{raw}}">
                 </div>
             </td>
